Revisión de textos e imágenes

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <div id="mobile-menu" class="hidden md:hidden">
             <nav class="flex flex-col items-center space-y-4 py-4 border-t">
                 <a href="#inicio" class="text-body hover:text-title">Inicio</a>
-                <a href="#sobre-mi" class="text-body hover:text-title">Sobre Mí</a>
+                <a href="#sobre-mi" class="text-body hover:text-title">Sobre mí</a>
                 <a href="#cursos" class="text-body hover:text-title">Cursos</a>
+                <a href="#personalizacion" class="text-body hover:text-title">Personalización</a>
                 <a href="#contacto" class="text-body hover:text-title">Contacto</a>
             </nav>
         </div>
@@ -80,17 +81,23 @@
                     <div class="p-8 md:p-12 flex flex-col">
                         <h3 class="text-3xl md:text-4xl font-bold text-title">¡Hola! soy Diana Chacón Ocariz</h3>
                         <p class="text-lg mt-6 text-body">
-                            Soy Ingeniera en Sistemas apasionada por la estrategia, los datos y la IA. Para mí, la tecnología siempre ha sido una herramienta para resolver problemas. 
+                            Soy Ingeniera en Sistemas apasionada por la estrategia, los datos y la IA. Con más de 20 años en tecnología, he visto cómo las herramientas evolucionan, pero nunca como ahora.
                         </p>
                         <p class="text-lg mt-4 text-body">
-                            Hoy en día, <span class="text-subtitle font-semibold">mi misión es capacitar a profesionales y ayudar a empresas y organizaciones en la implementación y uso estratégico de la IA. </span>Pero no se trata solo de copiar prompts o aprender a usar ChatGPT, se trata de comprender cómo interactuar con la IA para obtener los mejores resultados, identificar procesos que pueden ser automatizados o agilizados con el uso de IA.
+                            Hoy me he propuesto el reto más emocionante de mi carrera: <span class="text-subtitle font-semibold">Capacitar a profesionales y ayudar a empresas y organizaciones en la implementación y uso estratégico de la IA. </span>
                         </p>
+                        <p class="text-lg mt-4 text-body">
+                            No te voy a enseñar trucos superficiales (como "copiar y pegar prompts"), mi misión es transformar tu manera de trabajar y hacer las cosas, enseñándote a conversar estratégicamente con la IA para obtener resultados extraordinarios.
+                        </p>                      
                         <p class="text-lg mt-4 text-body">
                             Si necesitas estructurar tu negocio, capacitar a tu equipo o integrar herramientas de IA en tu empresa, estoy aquí para diseñar una solución personalizada, clara y efectiva.
                         </p>
                         <p class="text-lg mt-6 text-body">
                             <span class="text-subtitle font-semibold">Soy Diana Emprende: Transformando mentes, desarrollando negocios.</span>
                         </p>
+                        <div class="mt-6">
+                            <a href="./assets/docs/cv-diana.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver más</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -130,7 +137,7 @@
                         <img src="./assets/images/ia-presentaciones.jpeg" alt="Gráficos de presentación en una pantalla" class="w-full h-48 object-cover rounded-t-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x240/eeeeee/333333?text=Presentaciones';">
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Presentaciones que Impactan</h4>
-                            <p class="mt-3 text-body flex-grow">Domina el proceso para crear presentaciones de alto impacto en una fracción del tiempo con herramientas de vanguardia.</p>
+                            <p class="mt-3 text-body flex-grow">Domina el proceso para crear presentaciones de alto impacto en una fracción del tiempo con la ayuda de herramientas de IA.</p>
                             <div class="mt-4">
                                <a href="./assets/docs/presentaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener">Ver detalles</a>
                             </div>
@@ -141,7 +148,7 @@
                          <img src="./assets/images/ia-infografias.jpeg" alt="Diseño de infografía" class="w-full h-48 object-cover rounded-t-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x240/eeeeee/333333?text=Infografías';">
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Infografías con IA</h4>
-                            <p class="mt-3 text-body flex-grow">Transforma datos e ideas complejas en infografías claras y atractivas para resolver problemas de comunicación visual.</p>
+                            <p class="mt-3 text-body flex-grow">Transforma datos e ideas complejas en infografías claras y atractivas para resolver problemas de comunicación visual con la ayuda de herramientas de IA.</p>
                             <div class="mt-4">
                             <a href="./assets/docs/infografías-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener">Ver detalles</a>
                             </div>
@@ -152,7 +159,7 @@
                          <img src="./assets/images/ia-investigaciones.jpeg" alt="Libros y documentos para investigación" class="w-full h-48 object-cover rounded-t-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x240/eeeeee/333333?text=Investigación';">
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Investigación Aumentada</h4>
-                            <p class="mt-3 text-body flex-grow">Aprende un flujo avanzado para investigar, analizar y sintetizar grandes volúmenes de información (PDFs, webs, etc).</p>
+                            <p class="mt-3 text-body flex-grow">Aprende un flujo avanzado para investigar, analizar y sintetizar grandes volúmenes de información (PDFs, webs, etc) con la ayuda de IA.</p>
                             <div class="mt-4">
                                <a href="./assets/docs/investigaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener">Ver detalles</a>
                             </div>
@@ -203,14 +210,15 @@
                 </div>
                 <div class="py-10 md:py-12">
                     <div class="course-card bg-white rounded-lg border border-gray-100 shadow-xl animate-on-scroll fade-in-up flex flex-col md:flex-row">
-                        <img src="./assets/images/ia-asesoria.png" alt="Persona recibiendo asesoría personalizada" class="w-full md:w-5/12 h-64 md:h-auto object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/eeeeee/333333?text=Soluciones+a+la+medida';">
+                        <img src="./assets/images/ia-educacion.png" alt="Persona recibiendo asesoría personalizada" class="w-full md:w-5/12 h-64 md:h-auto object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/eeeeee/333333?text=Soluciones+a+la+medida';">
                         <div class="p-8 md:p-12 flex flex-col">
                             <h4 class="text-3xl font-bold text-title">IA para el Aula</h4>
                             <p class="mt-4 text-subtitle font-semibold" style="animation-delay: 0.2s;">Planifica, Crea, Personaliza y Evalúa en Minutos</p>
-                            <p class="mt-4 text-lg text-body flex-grow">Cursos y asesorías adaptados a ti, tu contexto, tu empresa. ¿Un curso para una profesión particular? ¿Resolución de un problema específico? ¿Ayuda en la implementación de herramientas de IA en tu empresa u organización? ¿Un prompt para automatizar tus tareas? Estudio tu problema e implemento la solución más adaptada para ti.</p>
-                            <p class="mt-4 text-subtitle font-semibold">Dirigido a: Emprendedores, profesionales y organizaciones que buscan soluciones personalizadas.</p>
+                            <p class="mt-4 text-lg text-body flex-grow">¿Te sientes abrumado por la IA mientras tus estudiantes ya la dominan?</p>
+                            <p class="mt-4 text-lg text-body flex-grow">Transforma tu manera de enseñar con herramientas que ya están revolucionando la educación. Domina la IA como un experto. Sin tecnicismos. Sin complicaciones. Solo resultados inmediatos. Recupera tu tiempo valioso y conviértete en el docente innovador que siempre quisiste ser.</p>
+                            <p class="mt-4 text-subtitle font-semibold">Dirigido a: Docentes y profesionales de la educación, profesores universitarios, coordinadores académicos.</p>
                             <div class="mt-6">
-                                <a href="#contacto" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block">Contáctame</a>
+                                <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver detalles</a>
                             </div>
                         </div>
                     </div>
