--- a/index.html
+++ b/index.html
@@ -243,23 +243,24 @@
     </main>
     
     <!-- Footer -->
-    <footer id="contacto" class="bg-gray-800 text-white">
+    <footer id="contacto" class="bg-gray-300 text-subtitle font-semibold">
         <div class="container mx-auto px-6 py-12">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center md:text-left">
                 <!-- Info -->
                 <div class="md:col-span-1">
                     <h4 class="text-lg font-bold">Diana Chacón Ocariz</h4>
-                    <p class="text-sm text-gray-400">Estrategia, Datos e IA.</p>
+                    <p class="text-sm">Transformando mentes, desarrollando negocios.</p>
+                    <p class="text-sm">Estrategia, Datos e IA.</p>
                 </div>
                 <!-- Contact -->
                 <div>
                      <h4 class="text-lg font-bold">Contacto</h4>
                      <div class="mt-2 space-y-2">
-                        <a href="mailto:diana@plastilina-la.com" class="flex items-center justify-center md:justify-start gap-2 text-gray-300 hover:text-white transition-colors duration-300">
+                        <a href="mailto:diana@plastilina-la.com" class="flex items-center justify-center md:justify-start gap-2 hover:text-gray-500 transition-colors duration-300">
                             <i class="fas fa-envelope"></i>
                             <span>diana@plastilina-la.com</span>
                         </a>
-                        <a href="https://wa.me/584127872515" target="_blank" class="flex items-center justify-center md:justify-start gap-2 text-gray-300 hover:text-white transition-colors duration-300">
+                        <a href="https://wa.me/584127872515" target="_blank" class="flex items-center justify-center md:justify-start gap-2 hover:text-gray-500 transition-colors duration-300">
                              <i class="fab fa-whatsapp"></i>
                              <span>+58 412 787 2515</span>
                         </a>
@@ -269,10 +270,10 @@
                 <div>
                     <h4 class="text-lg font-bold">Redes Sociales</h4>
                     <div class="flex justify-center md:justify-start space-x-5 mt-3">
-                       <a href="https://instagram.com/Diana.Emprende.Contigo" target="_blank" class="text-gray-300 hover:text-white transition-transform duration-300 hover:scale-110">
+                       <a href="https://instagram.com/Diana.Emprende.Contigo" target="_blank" class="hover:text-gray-500 transition-transform duration-300 hover:scale-110">
                            <i class="fab fa-instagram fa-2x"></i>
                        </a>
-                        <a href="https://linkedin.com/in/DianaEmprende" target="_blank" class="text-gray-300 hover:text-white transition-transform duration-300 hover:scale-110">
+                        <a href="https://linkedin.com/in/DianaEmprende" target="_blank" class="hover:text-gray-500 transition-transform duration-300 hover:scale-110">
                            <i class="fab fa-linkedin fa-2x"></i>
                        </a>
                     </div>
