--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </main>
     
     <!-- Footer -->
-    <footer id="contacto" class="bg-gray-300 text-subtitle font-semibold">
+    <footer id="contacto" class="bg-gray-300 text-title font-semibold">
         <div class="container mx-auto px-6 py-12">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center md:text-left">
                 <!-- Info -->
