--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="./src/styles.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F8SV1J2GE2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-F8SV1J2GE2');
+    </script>
+
 </head>
 <body class="text-body antialiased">
 
