--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         gtag('js', new Date());
 
         gtag('config', 'G-F8SV1J2GE2');
+
+        // Función para rastrear eventos personalizados
+        function trackEvent(eventName, category, label, value = null) {
+            gtag('event', eventName, {
+            'event_category': category,
+            'event_label': label,
+            'value': value
+            });
+        }
     </script>
 
 </head>
@@ -130,7 +139,8 @@
                         <p class="mt-4 text-lg text-body">Comprende los fundamentos y aprende a comunicarte de forma efectiva con la IA. Aplica técnicas prácticas para redactar documentos, organizar información, generar ideas y automatizar tareas rutinarias. Es el curso esencial que todos deberían hacer.</p>
                         <p class="mt-4 text-subtitle font-semibold">Dirigido a: Profesionales y curiosos que sienten que se están quedando atrás y desean empezar a usar la IA.</p>
                         <div class="mt-6">
-                            <a href="./assets/docs/ia-basico.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver detalles</a>
+                            <a href="./assets/docs/ia-basico.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
+                            onclick="trackEvent('click_cta', 'engagement', 'boton_ia_basico')">Ver detalles</a>
                         </div>
                     </div>
                 </div>
@@ -149,7 +159,8 @@
                             <h4 class="text-xl font-bold text-title">Presentaciones que Impactan</h4>
                             <p class="mt-3 text-body flex-grow">Domina el proceso para crear presentaciones de alto impacto en una fracción del tiempo con la ayuda de herramientas de IA.</p>
                             <div class="mt-4">
-                               <a href="./assets/docs/presentaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener">Ver detalles</a>
+                               <a href="./assets/docs/presentaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
+                               onclick="trackEvent('click_cta', 'engagement', 'boton_presentaciones_ia')">Ver detalles</a>
                             </div>
                         </div>
                     </div>
@@ -160,7 +171,8 @@
                             <h4 class="text-xl font-bold text-title">Infografías con IA</h4>
                             <p class="mt-3 text-body flex-grow">Transforma datos e ideas complejas en infografías claras y atractivas para resolver problemas de comunicación visual con la ayuda de herramientas de IA.</p>
                             <div class="mt-4">
-                            <a href="./assets/docs/infografías-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener">Ver detalles</a>
+                            <a href="./assets/docs/infografías-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
+                            onclick="trackEvent('click_cta', 'engagement', 'boton_infografias_ia')">Ver detalles</a>
                             </div>
                         </div>
                     </div>
@@ -171,7 +183,8 @@
                             <h4 class="text-xl font-bold text-title">Investigación Aumentada</h4>
                             <p class="mt-3 text-body flex-grow">Aprende un flujo avanzado para investigar, analizar y sintetizar grandes volúmenes de información (PDFs, webs, etc) con la ayuda de IA.</p>
                             <div class="mt-4">
-                               <a href="./assets/docs/investigaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener">Ver detalles</a>
+                               <a href="./assets/docs/investigaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
+                               onclick="trackEvent('click_cta', 'engagement', 'boton_investigaciones_ia')">Ver detalles</a>
                             </div>
                         </div>
                     </div>
@@ -228,7 +241,8 @@
                             <p class="mt-4 text-lg text-body flex-grow">Transforma tu manera de enseñar con herramientas que ya están revolucionando la educación. Domina la IA como un experto. Sin tecnicismos. Sin complicaciones. Solo resultados inmediatos. Recupera tu tiempo valioso y conviértete en el docente innovador que siempre quisiste ser.</p>
                             <p class="mt-4 text-subtitle font-semibold">Dirigido a: Docentes y profesionales de la educación, profesores universitarios, coordinadores académicos.</p>
                             <div class="mt-6">
-                                <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver detalles</a>
+                                <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
+                                onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Ver detalles</a>
                             </div>
                         </div>
                     </div>
@@ -242,7 +256,8 @@
                             <p class="mt-4 text-lg text-body flex-grow">Cursos y asesorías adaptados a ti, tu contexto, tu empresa. ¿Un curso para una profesión particular? ¿Resolución de un problema específico? ¿Ayuda en la implementación de herramientas de IA en tu empresa u organización? ¿Un prompt para automatizar tus tareas? Estudio tu problema e implemento la solución más adaptada para ti.</p>
                             <p class="mt-4 text-subtitle font-semibold">Dirigido a: Emprendedores, profesionales y organizaciones que buscan soluciones personalizadas.</p>
                             <div class="mt-6">
-                                <a href="#contacto" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block">Contáctame</a>
+                                <a href="#contacto" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" 
+                                onclick="trackEvent('click_cta', 'engagement', 'boton_contacto')">Contáctame</a>
                             </div>
                         </div>
                     </div>
@@ -280,10 +295,12 @@
                 <div>
                     <h4 class="text-lg font-bold">Redes Sociales</h4>
                     <div class="flex justify-center md:justify-start space-x-5 mt-3">
-                       <a href="https://instagram.com/Diana.Emprende.Contigo" target="_blank" class="hover:text-gray-500 transition-transform duration-300 hover:scale-110">
+                       <a href="https://instagram.com/Diana.Emprende.Contigo" target="_blank" class="hover:text-gray-500 transition-transform duration-300 hover:scale-110"
+                       onclick="trackEvent('click_cta', 'engagement', 'boton_instagram')">
                            <i class="fab fa-instagram fa-2x"></i>
                        </a>
-                        <a href="https://linkedin.com/in/DianaEmprende" target="_blank" class="hover:text-gray-500 transition-transform duration-300 hover:scale-110">
+                        <a href="https://linkedin.com/in/DianaEmprende" target="_blank" class="hover:text-gray-500 transition-transform duration-300 hover:scale-110"
+                        onclick="trackEvent('click_cta', 'engagement', 'boton_linkedin')">
                            <i class="fab fa-linkedin fa-2x"></i>
                        </a>
                     </div>
