--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h1 class="text-4xl md:text-6xl font-black text-white animate-on-scroll fade-in-up">Diana Emprende</h1>
                 <h2 class="text-2xl md:text-4xl text-white/90 mt-6 max-w-3xl mx-auto animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">Transformando Mentes,</h2>
                 <h2 class="text-2xl md:text-4xl text-white/90 mt-6 max-w-3xl mx-auto animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">Desarrollando Negocios.</h2>
-                <h2 class="text-xl md:text-2xl text-white/90 mt-6 max-w-3xl mx-auto animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">Asesoría y cursos prácticos en Inteligencia Artificial diseñados para profesionales y emprendedores.</h2>
+                <h2 class="text-xl md:text-2xl text-white/90 mt-6 max-w-3xl mx-auto animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">Ayudo a profesionales, empresas y organizaciones a utilizar herramientas de IA y potenciar su productividad.</h2>
                 <a href="#cursos" class="btn-primary text-white font-bold py-3 px-8 rounded-full inline-block mt-10 text-lg animate-on-scroll fade-in-up" style="animation-delay: 0.4s;">Ver Cursos</a>
             </div>
         </section>
@@ -129,7 +129,7 @@
 
                 <!-- Main Course -->
                 <div class="course-card bg-white rounded-lg border border-gray-100 shadow-xl mb-20 animate-on-scroll fade-in-up flex flex-col md:flex-row">
-                    <img src="./assets/images/ia-basico.jpeg" alt="Personas colaborando en una oficina" class="w-full md:w-5/12 h-64 md:h-auto object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/eeeeee/333333?text=Imagen+del+curso';">
+                    <img src="./assets/images/ia-basico.png" alt="Personas colaborando en una oficina" class="w-full md:w-5/12 h-64 md:h-auto object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/eeeeee/333333?text=Imagen+del+curso';">
                     <div class="p-8 md:p-12">
                         <h4 class="text-3xl font-bold text-title">IA para el Mundo Real: De Cero a Proactivo</h4>
                         <p class="mt-4 text-lg text-body">Comprende los fundamentos y aprende a comunicarte de forma efectiva con la IA. Aplica técnicas prácticas para redactar documentos, organizar información, generar ideas y automatizar tareas rutinarias. Es el curso esencial que todos deberían hacer.</p>
