--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@
             <div class="container mx-auto px-6">
                 <div class="flex items-center justify-center space-x-8 text-sm font-medium">
                     <div class="header-announcement-item item-animation flex items-center space-x-2">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>Próximo curso "Investigación Aumentada con IA" - 24-29 de Julio 2025</span>
+                        <a href="#curso-investigaciones-ia">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>Curso "Investigación Aumentada con IA" - 24-29 de Julio 2025</span>
+                        </a>
                     </div>
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>Próximo curso "Presentaciones que Impactan con IA" - 31/7 - 5/8 2025</span>
+                        <a href="#curso-presentaciones-ia">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>Próximo curso "Presentaciones que Impactan con IA" - 31/7 - 5/8 2025</span>
+                        </a>
                     </div>
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <i class="fas fa-gift"></i>
@@ -134,7 +138,7 @@
                 </div>
 
                 <!-- Main Course -->
-                <div class="course-card bg-white rounded-lg border border-gray-100 shadow-xl mb-20 animate-on-scroll fade-in-up flex flex-col md:flex-row">
+                <div id="curso-ia-basico" class="course-card bg-white rounded-lg border border-gray-100 shadow-xl mb-20 animate-on-scroll fade-in-up flex flex-col md:flex-row">
                     <img src="./assets/images/ia-basico.png" alt="Personas colaborando en una oficina" class="w-full md:w-5/12 h-64 md:h-auto object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/eeeeee/333333?text=Imagen+del+curso';">
                     <div class="p-8 md:p-12">
                         <h4 class="text-2xl md:text-4xl font-bold text-title">IA para el Mundo Real: De Cero a Proactivo</h4>
@@ -155,7 +159,7 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <!-- Course 2 -->
-                    <div class="specialized-card bg-gray-200/30 rounded-lg flex flex-col animate-on-scroll fade-in-up">
+                    <div id="curso-presentaciones-ia" class="specialized-card bg-gray-200/30 rounded-lg flex flex-col animate-on-scroll fade-in-up">
                         <img src="./assets/images/ia-presentaciones.jpeg" alt="Gráficos de presentación en una pantalla" class="w-full h-48 object-cover rounded-t-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x240/eeeeee/333333?text=Presentaciones';">
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Presentaciones que Impactan con IA</h4>
@@ -167,7 +171,7 @@
                         </div>
                     </div>
                     <!-- Course 3 -->
-                    <div class="specialized-card bg-gray-200/30 rounded-lg flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">
+                    <div id="curso-infografias-ia" class="specialized-card bg-gray-200/30 rounded-lg flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">
                          <img src="./assets/images/ia-infografias.jpeg" alt="Diseño de infografía" class="w-full h-48 object-cover rounded-t-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x240/eeeeee/333333?text=Infografías';">
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Infografías con IA</h4>
@@ -179,7 +183,7 @@
                         </div>
                     </div>
                     <!-- Course 4 -->
-                    <div class="specialized-card bg-gray-200/30 rounded-lg flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.4s;">
+                    <div id="curso-investigaciones-ia" class="specialized-card bg-gray-200/30 rounded-lg flex flex-col animate-on-scroll fade-in-up" style="animation-delay: 0.4s;">
                          <img src="./assets/images/ia-investigaciones.png" alt="Libros y documentos para investigación" class="w-full h-48 object-cover rounded-t-lg" onerror="this.onerror=null;this.src='https://placehold.co/400x240/eeeeee/333333?text=Investigación';">
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Investigación Aumentada con IA</h4>
@@ -200,7 +204,7 @@
                             <h3 class="text-2xl md:text-4xl font-bold text-title animate-on-scroll fade-in-up">Adaptados a ti</h3>
                             <p class="text-lg text-subtitle mt-4 max-w-2xl mx-auto animate-on-scroll fade-in-up" style="animation-delay: 0.2s;">Cursos adaptados a tu profesión, a tu empresa, a tu contexto.</p>
                         </div>
-                        <div class="py-4 md:py-6">
+                        <div id="curso-ia-educacion" class="py-4 md:py-6">
                             <div class="course-card bg-white rounded-lg border border-gray-100 shadow-xl animate-on-scroll fade-in-up flex flex-col md:flex-row">
                                 <img src="./assets/images/ia-educacion.png" alt="Persona recibiendo asesoría personalizada" class="w-full md:w-5/12 h-64 md:h-auto object-cover" onerror="this.onerror=null;this.src='https://placehold.co/600x400/eeeeee/333333?text=Soluciones+a+la+medida';">
                                 <div class="p-8 md:p-12 flex flex-col">
@@ -321,12 +325,16 @@
             <div class="container mx-auto px-6">
                 <div class="flex items-center justify-center space-x-8 text-sm font-medium">
                     <div class="footer-announcement-item item-animation flex items-center space-x-2">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>Próximo curso "Investigación Aumentada con IA" - 24-29 de Julio 2025</span>
+                        <a href="#curso-investigaciones-ia">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>Próximo curso "Investigación Aumentada con IA" - 24-29 de Julio 2025</span>
+                        </a>
                     </div>
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>Próximo curso "Presentaciones que Impactan con IA" - 31/7 - 5/8 2025</span>
+                        <a href="#curso-presentaciones-ia">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>Próximo curso "Presentaciones que Impactan con IA" - 31/7 - 5/8 2025</span>
+                        </a>    
                     </div>
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <i class="fas fa-gift"></i>
