--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                     <div class="header-announcement-item item-animation flex items-center space-x-2">
                         <a href="#curso-investigaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Curso "Investigación Aumentada con IA" - 24-29 de Julio 2025</span>
+                            <span>Curso "Investigación Aumentada con IA" - 31/7 - 5/8 2025</span>
                         </a>
                     </div>
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <a href="#curso-presentaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Próximo curso "Presentaciones que Impactan con IA" - 31/7 - 5/8 2025</span>
+                            <span>Próximo curso "Presentaciones que Impactan con IA" - 7/8 - 12/8 2025</span>
                         </a>
                     </div>
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
@@ -327,13 +327,13 @@
                     <div class="footer-announcement-item item-animation flex items-center space-x-2">
                         <a href="#curso-investigaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Próximo curso "Investigación Aumentada con IA" - 24-29 de Julio 2025</span>
+                            <span>Próximo curso "Investigación Aumentada con IA" - 31/7 - 5/8 2025</span>
                         </a>
                     </div>
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <a href="#curso-presentaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Próximo curso "Presentaciones que Impactan con IA" - 31/7 - 5/8 2025</span>
+                            <span>Próximo curso "Presentaciones que Impactan con IA" - 7/8 - 12/8 2025</span>
                         </a>    
                     </div>
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
