--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div id="announcement-banner" class="bg-gradient-to-r from-[var(--color-title)] to-[var(--color-subtitle)] text-white py-2 relative overflow-hidden">
             <div class="container mx-auto px-6">
                 <div class="flex items-center justify-center space-x-8 text-sm font-medium">
-                    <div class="header-announcement-item item-animation flex items-center space-x-2">
+                    <!-- <div class="header-announcement-item item-animation flex items-center space-x-2">
                         <a href="#curso-investigaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
                             <span>Curso "Investigación Aumentada con IA" - 24/7 al 28/7 2025</span>
@@ -96,15 +96,15 @@
                             <i class="fas fa-calendar-alt"></i>
                             <span>Próximo curso "Presentaciones que Impactan con IA" - 7/8 al 12/8 2025</span>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <i class="fas fa-gift"></i>
                         <span>Descuento para grupos de 15 participantes o más</span>
                     </div>
-                    <div class="header-announcement-item item-animation hidden lg:flex items-center space-x-2">
+<!--                     <div class="header-announcement-item item-animation hidden lg:flex items-center space-x-2">
                         <i class="fas fa-users"></i>
                         <span>Cupos limitados - ¡Reserva ya!</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <!-- Close button -->
@@ -324,7 +324,7 @@
         <div id="footer-announcement-banner" class="bg-gradient-to-r from-[var(--color-title)] to-[var(--color-subtitle)] text-white py-2 relative overflow-hidden">
             <div class="container mx-auto px-6">
                 <div class="flex items-center justify-center space-x-8 text-sm font-medium">
-                    <div class="footer-announcement-item item-animation flex items-center space-x-2">
+<!--                     <div class="footer-announcement-item item-animation flex items-center space-x-2">
                         <a href="#curso-investigaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
                             <span>Próximo curso "Investigación Aumentada con IA" - 24/7 al 28/7 2025</span>
@@ -335,15 +335,15 @@
                             <i class="fas fa-calendar-alt"></i>
                             <span>Próximo curso "Presentaciones que Impactan con IA" - 7/8 al 12/8 2025</span>
                         </a>    
-                    </div>
+                    </div> -->
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <i class="fas fa-gift"></i>
                         <span>Descuento para grupos de 15 participantes o más</span>
                     </div>
-                    <div class="footer-announcement-item item-animation hidden lg:flex items-center space-x-2">
+<!--                     <div class="footer-announcement-item item-animation hidden lg:flex items-center space-x-2">
                         <i class="fas fa-users"></i>
                         <span>Cupos limitados - ¡Reserva ya!</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
