--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
         <div id="announcement-banner" class="bg-gradient-to-r from-[var(--color-title)] to-[var(--color-subtitle)] text-white py-2 relative overflow-hidden">
             <div class="container mx-auto px-6">
                 <div class="flex items-center justify-center space-x-8 text-sm font-medium">
-                    <!-- <div class="header-announcement-item item-animation flex items-center space-x-2">
-                        <a href="#curso-investigaciones-ia">
+                    <div class="header-announcement-item item-animation flex items-center space-x-2">
+                        <a href="#curso-ia-educacion">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Curso "Investigación Aumentada con IA" - 24/7 al 28/7 2025</span>
+                            <span>Próximo curso "IA para el Aula" - Comienza 3/10/2025</span>
                         </a>
                     </div>
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <a href="#curso-presentaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Próximo curso "Presentaciones que Impactan con IA" - 7/8 al 12/8 2025</span>
+                            <span>Próximo curso "Presentaciones que Impactan con IA" - Comienza 24/10/2025</span>
                         </a>
-                    </div> -->
+                    </div>
                     <div class="header-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <i class="fas fa-gift"></i>
                         <span>Descuento para grupos de 15 participantes o más</span>
@@ -324,18 +324,18 @@
         <div id="footer-announcement-banner" class="bg-gradient-to-r from-[var(--color-title)] to-[var(--color-subtitle)] text-white py-2 relative overflow-hidden">
             <div class="container mx-auto px-6">
                 <div class="flex items-center justify-center space-x-8 text-sm font-medium">
-<!--                     <div class="footer-announcement-item item-animation flex items-center space-x-2">
-                        <a href="#curso-investigaciones-ia">
+                    <div class="footer-announcement-item item-animation flex items-center space-x-2">
+                        <a href="#curso-ia-educacion">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Próximo curso "Investigación Aumentada con IA" - 24/7 al 28/7 2025</span>
+                            <span>Próximo curso "IA para el Aula" - Comienza 3/10/2025</span>
                         </a>
                     </div>
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <a href="#curso-presentaciones-ia">
                             <i class="fas fa-calendar-alt"></i>
-                            <span>Próximo curso "Presentaciones que Impactan con IA" - 7/8 al 12/8 2025</span>
-                        </a>    
-                    </div> -->
+                            <span>Próximo curso "Presentaciones que Impactan con IA" - Comienza 24/10/2025</span>
+                        </a>   
+                    </div>
                     <div class="footer-announcement-item item-animation hidden md:flex items-center space-x-2">
                         <i class="fas fa-gift"></i>
                         <span>Descuento para grupos de 15 participantes o más</span>
