--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
                                     <div class="mt-6">
                                         <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                                         onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Ver detalles</a>
+                                        <a href="./assets/docs/botiquin-docentes.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
+                                        onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Botiquín IA</a>
                                     </div>
                                 </div>
                             </div>
